# FunWithFaces

./: CMakeLists.txt  README.md
include/: face_library.h
notebooks/: seamless_cloning.ipynb
notebooks/.ipynb_checkpoints/: seamless_cloning-checkpoint.ipynb
src/: CMakeLists.txt  FacesAppRun.cpp  face_library.cpp  main.cpp
